新增调试llama大模型和Lora原理测试

--- a/llm-algorithm/transformer/01_hand_self_attention.ipynb
+++ b/llm-algorithm/transformer/01_hand_self_attention.ipynb
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -305,7 +305,7 @@
     "        \n",
     "        # 应用注意力掩码\n",
     "        if attention_mask is not None:\n",
-    "            # 给 masked 位置填充一个极小的值\n",
+    "            # 给 masked 位置填充一个极小的值-1e20，然后取exp指数函数负无穷就变为0\n",
     "            att_weight = att_weight.masked_fill(attention_mask == 0, float(\"-1e20\"))\n",
     "\n",
     "        # 计算 softmax\n",
