--- a/llm-algorithm/transformer/02_hand_mutil_head_attention.ipynb
+++ b/llm-algorithm/transformer/02_hand_mutil_head_attention.ipynb
@@ -10,87 +10,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[[[0, 1],\n",
-      "          [0, 1]],\n",
-      "\n",
-      "         [[0, 1],\n",
-      "          [0, 1]],\n",
-      "\n",
-      "         [[0, 1],\n",
-      "          [0, 1]],\n",
-      "\n",
-      "         [[0, 1],\n",
-      "          [0, 1]],\n",
-      "\n",
-      "         [[0, 1],\n",
-      "          [0, 1]],\n",
-      "\n",
-      "         [[0, 1],\n",
-      "          [0, 1]],\n",
-      "\n",
-      "         [[0, 1],\n",
-      "          [0, 1]],\n",
-      "\n",
-      "         [[0, 1],\n",
-      "          [0, 1]]],\n",
-      "\n",
-      "\n",
-      "        [[[0, 0],\n",
-      "          [0, 0]],\n",
-      "\n",
-      "         [[0, 0],\n",
-      "          [0, 0]],\n",
-      "\n",
-      "         [[0, 0],\n",
-      "          [0, 0]],\n",
-      "\n",
-      "         [[0, 0],\n",
-      "          [0, 0]],\n",
-      "\n",
-      "         [[0, 0],\n",
-      "          [0, 0]],\n",
-      "\n",
-      "         [[0, 0],\n",
-      "          [0, 0]],\n",
-      "\n",
-      "         [[0, 0],\n",
-      "          [0, 0]],\n",
-      "\n",
-      "         [[0, 0],\n",
-      "          [0, 0]]],\n",
-      "\n",
-      "\n",
-      "        [[[1, 0],\n",
-      "          [1, 0]],\n",
-      "\n",
-      "         [[1, 0],\n",
-      "          [1, 0]],\n",
-      "\n",
-      "         [[1, 0],\n",
-      "          [1, 0]],\n",
-      "\n",
-      "         [[1, 0],\n",
-      "          [1, 0]],\n",
-      "\n",
-      "         [[1, 0],\n",
-      "          [1, 0]],\n",
-      "\n",
-      "         [[1, 0],\n",
-      "          [1, 0]],\n",
-      "\n",
-      "         [[1, 0],\n",
-      "          [1, 0]],\n",
-      "\n",
-      "         [[1, 0],\n",
-      "          [1, 0]]]])\n",
-      "<class 'torch.Tensor'>\n",
+      "q_state: torch.Size([3, 8, 2, 16])\n",
       "tensor([[[[0.0000, 1.0000],\n",
       "          [0.0000, 1.0000]],\n",
       "\n",
@@ -172,7 +99,7 @@
        "torch.Size([3, 2, 128])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -209,13 +136,16 @@
     "\n",
     "        # shape 变成 （batch_size, num_head, seq_len, head_dim）\n",
     "        q_state=Q.view(batch_size,seq_len,self.nums_head,self.head_dim).permute(0,2,1,3)\n",
-    "\n",
+    "        \n",
     "        k_state=K.view(batch_size,seq_len,self.nums_head,self.head_dim).transpose(1,2)\n",
     "\n",
     "        v_state = V.view(batch_size, seq_len, self.nums_head, self.head_dim).transpose( 1, 2)\n",
+    "        \n",
+    "        print(\"q_state:\",q_state.shape)\n",
+    "        \n",
     "        # 主意这里需要用 head_dim，而不是 hidden_dim\n",
     "        attention_weight=(q_state @ k_state.transpose(-1,-2)/math.sqrt(self.head_dim))\n",
-    "        print(type(attention_mask))\n",
+    "       \n",
     "        if attention_mask is not None:\n",
     "            attention_weight = attention_weight.masked_fill(\n",
     "                attention_mask == 0, float(\"-1e20\")\n",
