整理算法目录

--- a/llm-algorithm/00_base_fun_test.ipynb
+++ b/llm-algorithm/00_base_fun_test.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -18,7 +18,22 @@
      "output_type": "stream",
      "text": [
       "原始张量形状: torch.Size([2, 3, 4])\n",
-      "重新排列维度后的张量形状: torch.Size([3, 2, 4])\n"
+      "tensor([[[ 0.7673, -0.6361, -1.6773, -0.2347],\n",
+      "         [ 1.4445,  0.4438,  1.3673, -0.4134],\n",
+      "         [ 1.1638, -0.3606,  0.5471, -0.2983]],\n",
+      "\n",
+      "        [[ 0.5462,  1.2433, -1.5241, -0.5956],\n",
+      "         [ 0.9521,  0.1408, -1.0522,  0.0779],\n",
+      "         [-0.1250,  1.4738, -0.7332,  0.2156]]])\n",
+      "重新排列维度后的张量形状: torch.Size([3, 2, 4])\n",
+      "tensor([[[ 0.7673, -0.6361, -1.6773, -0.2347],\n",
+      "         [ 0.5462,  1.2433, -1.5241, -0.5956]],\n",
+      "\n",
+      "        [[ 1.4445,  0.4438,  1.3673, -0.4134],\n",
+      "         [ 0.9521,  0.1408, -1.0522,  0.0779]],\n",
+      "\n",
+      "        [[ 1.1638, -0.3606,  0.5471, -0.2983],\n",
+      "         [-0.1250,  1.4738, -0.7332,  0.2156]]])\n"
      ]
     }
    ],
@@ -32,9 +47,11 @@
     "# 将维度顺序从[2, 3, 4]更改为[3, 2, 4]\n",
     "tensor_permuted = tensor.permute(1, 0, 2)\n",
     "\n",
-    "# 打印原始张量和重新排列维度后的张量的形状\n",
+    "# 打印原始张量和重新排列维度后的张量的形状和内容\n",
     "print(\"原始张量形状:\", tensor.shape)\n",
-    "print(\"重新排列维度后的张量形状:\", tensor_permuted.shape)\n"
+    "print(tensor)\n",
+    "print(\"重新排列维度后的张量形状:\", tensor_permuted.shape)\n",
+    "print(tensor_permuted)\n"
    ]
   },
   {
