--- a/llm-algorithm/00_base_fun_test.ipynb
+++ b/llm-algorithm/00_base_fun_test.ipynb
@@ -51,7 +51,9 @@
     "print(\"原始张量形状:\", tensor.shape)\n",
     "print(tensor)\n",
     "print(\"重新排列维度后的张量形状:\", tensor_permuted.shape)\n",
-    "print(tensor_permuted)\n"
+    "print(tensor_permuted)\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -125,6 +127,7 @@
     "\n",
     "print(y)\n",
     "#在这个例子中，原始张量 x 的形状是 [2, 3]。通过调用 repeat(2, 3)，我们告诉PyTorch在第一个维度（行）上重复2次，在第二个维度（列）上重复3次。因此，最终得到的张量 y 的形状是 [4, 9]。\n",
+    "\n",
     "\n",
     "\n"
    ]
